# api/controllers/post_controller.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"github.com/BetterToPractice/go-gin-setup/api/services"
 	"github.com/BetterToPractice/go-gin-setup/models"
+	"github.com/BetterToPractice/go-gin-setup/models/dto"
 	"github.com/BetterToPractice/go-gin-setup/pkg/response"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -11,11 +12,15 @@ import (
 
 type PostController struct {
 	postService services.PostService
+	userService services.UserService
+	authService services.AuthService
 }
 
-func NewPostController(postService services.PostService) PostController {
+func NewPostController(postService services.PostService, userService services.UserService, authService services.AuthService) PostController {
 	return PostController{
 		postService: postService,
+		userService: userService,
+		authService: authService,
 	}
 }
 
@@ -62,6 +67,37 @@ func (c PostController) Detail(ctx *gin.Context) {
 	}
 
 	response.Response{Code: http.StatusOK, Data: qr}.JSON(ctx)
+}
+
+// Create godoc
+//
+//	@Summary		Create a post
+//	@Description	Create a post
+//	@Tags			post
+//	@Accept			application/json
+//	@Produce		application/json
+//	@Param 			data body dto.PostRequest true "Post"
+//	@Router			/posts [post]
+func (c PostController) Create(ctx *gin.Context) {
+	user, err := c.authService.Authorize(ctx)
+	if err != nil {
+		response.Response{Code: http.StatusUnauthorized, Message: err}.JSON(ctx)
+		return
+	}
+
+	params := new(dto.PostRequest)
+	if err := ctx.ShouldBind(params); err != nil {
+		response.Response{Code: http.StatusBadRequest, Message: err}.JSON(ctx)
+		return
+	}
+
+	postResponse, err := c.postService.Create(params, user)
+	if err != nil {
+		response.Response{Code: http.StatusBadRequest, Message: err}.JSON(ctx)
+		return
+	}
+
+	response.Response{Code: http.StatusOK, Data: postResponse}.JSON(ctx)
 }
 
 // Destroy godoc
