# docs/swagger.json
@@ -53,6 +53,31 @@
                 ],
                 "summary": "List of posts",
                 "responses": {}
+            },
+            "post": {
+                "description": "Create a post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "post"
+                ],
+                "summary": "Create a post",
+                "parameters": [
+                    {
+                        "description": "Post",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PostRequest"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         },
         "/posts/{id}": {
@@ -208,6 +233,21 @@
             "type": "object",
             "properties": {
                 "access": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PostRequest": {
+            "type": "object",
+            "required": [
+                "body",
+                "title"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
